querying stats using words
