# mykid-service/mykid-rest-adapter/src/main/java/org/jzeratul/mykid/rest/StatsService.java
@@ -1,11 +1,13 @@
 package org.jzeratul.mykid.rest;
 
 import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.ListIterator;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import javax.validation.Valid;
@@ -33,7 +35,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 public class StatsService {
 
 	private static final Logger log = LoggerFactory.getLogger(StatsService.class);
-  private static final DateTimeFormatter DF = DateTimeFormatter.ofPattern("dd-MMM-YYYY");
+	private static final DateTimeFormatter DF = DateTimeFormatter.ofPattern("dd-MMM-YYYY");
 
 	private final EncryptorService encryptorService;
 	private final StatsDataStore statsStore;
@@ -69,10 +71,10 @@ public class StatsService {
 
 		LocalDate currentDay = null;
 		DailySleep daySleep = null;
-		while(listIterator.hasNext()) {
+		while (listIterator.hasNext()) {
 			SleepRecord r = listIterator.next();
-						
-			if(currentDay == null || !currentDay.equals(r.getSleepDay())) {
+
+			if (currentDay == null || !currentDay.equals(r.getSleepDay())) {
 				currentDay = r.getSleepDay();
 				daySleep = new DailySleep();
 				results.add(daySleep);
@@ -82,25 +84,33 @@ public class StatsService {
 				daySleep.setTotalSleep(daySleep.getTotalSleep() + r.getSleepDuration().toMinutes());
 			}
 		}
-		
+
 		return results;
 	}
 
-	public List<DailyStat> getDailyStats() {
+	public List<DailyStat> getDailyStats(Optional<String> history) {
+
+		LocalDateTime[] timeInterval;
+		if(history.isPresent()) {
+			timeInterval = BackInHistory.valueOf(history.get()).getDates();
+		} else {
+			timeInterval = BackInHistory.last24h.getDates();
+		}
 		
 		var results = new ArrayList<DailyStat>();
-		// because of the weight which is not measured at each entry, we traverse backwards
-		List<KidStatsRecord> stats = statsStore.getStats(userService.getCurrentUserId());
+		// because of the weight which is not measured at each entry, we traverse
+		// backwards
+		List<KidStatsRecord> stats = statsStore.getStats(timeInterval, userService.getCurrentUserId());
 		ListIterator<KidStatsRecord> listIterator = stats.listIterator(stats.size());
-		
+
 		LocalDate currentDay = null;
 		DailyStat dayStat = null;
 		double lastWeight = 0;
-		
-		while(listIterator.hasPrevious()) {
+
+		while (listIterator.hasPrevious()) {
 			KidStatsRecord r = listIterator.previous();
-			
-			if(currentDay == null || !currentDay.equals(r.getDay())) {
+
+			if (currentDay == null || !currentDay.equals(r.getDay())) {
 				currentDay = r.getDay();
 				dayStat = new DailyStat();
 				results.add(dayStat);
@@ -109,28 +119,26 @@ public class StatsService {
 				dayStat.setWeight(0d);
 				dayStat.date(currentDay.format(DF));
 			}
-			
+
 			dayStat.activities(r.activities().stream().map(GenericActivities::fromValue).toList());
 			dayStat.dailyFeedQuantity(dayStat.getDailyFeedQuantity() + r.totalFeedQuantity());
 			dayStat.dailyFeedTime(dayStat.getDailyFeedTime() + r.totalFeedDuration());
-			
-			if(r.weight() > 0) {
+
+			if (r.weight() > 0) {
 				lastWeight = r.weight();
 			}
-			
+
 			dayStat.weight(lastWeight);
 		}
-		
+
 		Collections.reverse(results);
-		
+
 		return results;
 	}
 
 	public GetSleepResponse getSleep() {
-		
-		List<Sleep> entries = statsStore.getSleep(userService.getCurrentUserId())
-				.stream()
-				.map(this::mapFromRecord)
+
+		List<Sleep> entries = statsStore.getSleep(userService.getCurrentUserId()).stream().map(this::mapFromRecord)
 				.collect(Collectors.toList());
 
 		return new GetSleepResponse().sleepEntries(entries);
@@ -138,11 +146,9 @@ public class StatsService {
 
 	public GetStatsResponse getStats() {
 
-		var stats = statsStore.getStats(userService.getCurrentUserId())
-				.stream()
-				.map(this::mapFromRecord)
+		var stats = statsStore.getStats(BackInHistory.last7d.getDates(), userService.getCurrentUserId()).stream().map(this::mapFromRecord)
 				.collect(Collectors.toList());
-		
+
 		if (log.isDebugEnabled()) {
 			var log1 = stats.stream().map(s -> {
 				try {
@@ -178,29 +184,19 @@ public class StatsService {
 
 	private Stats mapFromRecord(KidStatsRecord r) {
 
-		return new Stats()
-				.token(encryptorService.encLong(r.id()))
-				.activities(
-						r.activities().stream()
-						.map(GenericActivities::fromValue)
-						.collect(Collectors.toList()))
-				.datetime(r.datetime())
-				.feedFromLeftDuration(r.feedFromLeftDuration())
-				.feedFromRightDuration(r.feedFromRightDuration())
-				.pumpFromLeftQuantity(r.pumpFromLeftQuantity())
+		return new Stats().token(encryptorService.encLong(r.id()))
+				.activities(r.activities().stream().map(GenericActivities::fromValue).collect(Collectors.toList()))
+				.datetime(r.datetime()).feedFromLeftDuration(r.feedFromLeftDuration())
+				.feedFromRightDuration(r.feedFromRightDuration()).pumpFromLeftQuantity(r.pumpFromLeftQuantity())
 				.pumpFromRightQuantity(r.pumpFromRightQuantity())
 				.extraBottleMotherMilkQuantity(r.extraBottleMotherMilkQuantity())
-				.extraBottleFormulaeMilkQuantity(r.extraBottleFormulaeMilkQuantity())
-				.temperature(r.temperature())
-				.weight(r.weight())
-				.daycount(r.dayFeedCount());
+				.extraBottleFormulaeMilkQuantity(r.extraBottleFormulaeMilkQuantity()).temperature(r.temperature())
+				.weight(r.weight()).daycount(r.dayFeedCount());
 	}
 
 	private Sleep mapFromRecord(SleepRecord record) {
-		return new Sleep().token(encryptorService.encLong(record.id()))
-				.createdAt(record.createdAt())
-				.sleepStart(record.startSleep())
-				.sleepEnd(record.endSleep());
+		return new Sleep().token(encryptorService.encLong(record.id())).createdAt(record.createdAt())
+				.sleepStart(record.startSleep()).sleepEnd(record.endSleep());
 	}
 
 	private SleepRecord mapToRecord(@Valid Sleep sleep) {
